doc: change documentation files for various components

--- a/app/accordion/@dev/page.mdx
+++ b/app/accordion/@dev/page.mdx
@@ -1,39 +1,36 @@
-import * as Demo from "@public/demo/accordion"
-import CodePreview from "@components/showcase/CodePreview"
-
+import * as Demo from '@public/demo/accordion';
+import CodePreview from '@components/showcase/CodePreview';
 
 <CodePreview paths={['accordion', 'BasicAccordion']}>
-    <Demo.BasicAccordion/>  
+  <Demo.BasicAccordion />
 </CodePreview>
-
 
 ## Single Accordion
 
 <CodePreview paths={['accordion', 'SingleAccordion']}>
-    <Demo.SingleAccordion/>  
+  <Demo.SingleAccordion />
 </CodePreview>
 
 ## Multiple Accordion
 
 <CodePreview paths={['accordion', 'MultiAccordion']}>
-    <Demo.MultiAccordion/>  
+  <Demo.MultiAccordion />
 </CodePreview>
-
 
 ## Accordion with left icon
 
 <CodePreview paths={['accordion', 'LeftIconAccordion']}>
-    <Demo.LeftIconAccordion/>  
+  <Demo.LeftIconAccordion />
 </CodePreview>
 
 ## Nested Accordion
 
 <CodePreview paths={['accordion', 'NestedAccordion']}>
-    <Demo.NestedAccordion/>  
+  <Demo.NestedAccordion />
 </CodePreview>
 
 ## Controlled Accordion
 
 <CodePreview paths={['accordion', 'ControlledAccordion']}>
-    <Demo.ControlledAccordion/>  
+  <Demo.ControlledAccordion />
 </CodePreview>
