--- a/app/inline-link/@spec/page.mdx
+++ b/app/inline-link/@spec/page.mdx
@@ -1,7 +1,7 @@
 import { Badge } from 'beta-parity-react/ui/Badge';
 import Image from '@components/showcase/ImagePreview';
 import Component from '@components/showcase/CodePreview';
-import * as Demo from "../@dev/demo-components"
+import * as Demo from '../@dev/demo-components';
 
 {/* Image => Image Example */}
 {/* Component => Component Example */}
@@ -10,34 +10,77 @@ import * as Demo from "../@dev/demo-components"
 A component that organizes content into vertically stacked collapsible and expandable sections.
 :::
 
-
 ## Design checklist <span id="design-checklist"></span>
+
 {/* Design checklist specification */}
 
-| Status | Item                                 | Description                                                                                                                                                                                                                       |
-| ------ | ------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| ✔️     | Anatomy                              | Includes descriptions of all parts of the component and its major variants.                                                                                                                                                       |
-| ✔️     | States                               | Includes all applicable interaction, display and value states.                                                                                                                                                                    |
-| ✔️     | Options                              | Includes all relevant options (functional type, stylistic kind, semantic color, size, orientation, optional iconography, decorations, etc.)                                                                                       |
-| ✔️     | Color schemes                        | Includes both light and dark color schemes.                                                                                                                                                                                       |
-|        | Behaviors                            | Includes descriptions of behaviors related to other components and responsive behaviors related to media breakpoints, size (minimums and maximums), orientation, alignment, position and layout (wrapping, truncation, overflow). |
+| Status | Item          | Description                                                                                                                                                                                                                       |
+| ------ | ------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| ✔️     | Anatomy       | Includes descriptions of all parts of the component and its major variants.                                                                                                                                                       |
+| ✔️     | States        | Includes all applicable interaction, display and value states.                                                                                                                                                                    |
+| ✔️     | Options       | Includes all relevant options (functional type, stylistic kind, semantic color, size, orientation, optional iconography, decorations, etc.)                                                                                       |
+| ✔️     | Color schemes | Includes both light and dark color schemes.                                                                                                                                                                                       |
+|        | Behaviors     | Includes descriptions of behaviors related to other components and responsive behaviors related to media breakpoints, size (minimums and maximums), orientation, alignment, position and layout (wrapping, truncation, overflow). |
 
 ## Anatomy <span id="anatomy"></span>
+
 {/* Anatomy specification */}
 
 ## States <span id="states"></span>
+
 {/* States specification */}
 
 ## Options <span id="options"></span>
+
 {/* Options specification */}
 
 ## Behaviors <span id="behaviors"></span>
+
 {/* Behaviors specification */}
 
 ## Changelog <span id="changelog"></span>
+
 {/* Changelog specification */}
 
-| Date       | Type                                                        | Description                                                                                 | Author      | Associated issue(s)  |
-|:-----------|:------------------------------------------------------------|---------------------------------------------------------------------------------------------|:------------|:---------------------|
-| YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/>    | Initial design                                                                              | Oanh Nguyen | PAR-52               |
+| Date       | Type                                                     | Description    | Author      | Associated issue(s) |
+| :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
+| YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
+## 🎨 Design Tokens for InlineLink
+
+| **Token**                             | **Color for** | **State/Meaning** | **CSS Selector(s)**            |
+| ------------------------------------- | ------------- | ----------------- | ------------------------------ |
+| `--color-text-link-standard-enabled`  | Standard link | Enabled           | .inline-link.standard          |
+| `--color-text-link-standard-hovered`  | Standard link | Hovered           | .inline-link.standard:hover    |
+| `--color-text-link-standard-focused`  | Standard link | Focused           | .inline-link.standard:focus    |
+| `--color-text-link-standard-disabled` | Standard link | Disabled          | .inline-link.standard.disabled |
+| `--color-text-link-neutral-enabled`   | Neutral link  | Enabled           | .inline-link.neutral           |
+| `--color-text-link-neutral-hovered`   | Neutral link  | Hovered           | .inline-link.neutral:hover     |
+| `--color-text-link-neutral-focused`   | Neutral link  | Focused           | .inline-link.neutral:focus     |
+| `--color-text-link-neutral-disabled`  | Neutral link  | Disabled          | .inline-link.neutral.disabled  |
+
+---
+
+_InlineLink may also inherit some tokens from Button or Text components for typography and spacing. See their documentation for more details._
+
+---
+
+## 🧩 InlineLink API Reference
+
+### `<InlineLink />`
+
+| **Prop**      | **Type**                | **Default** | **Description**                                 |
+| ------------- | ----------------------- | ----------- | ----------------------------------------------- |
+| **href**      | string                  |             | Link URL                                        |
+| **target**    | string                  |             | Target attribute (\_blank, \_self, etc.)        |
+| **size**      | 'sm' \| 'md' \| 'lg'    | _'md'_      | Link size                                       |
+| **color**     | string                  |             | Link color                                      |
+| **disabled**  | boolean                 | _false_     | Disable the link                                |
+| **underline** | boolean                 | _true_      | Show underline                                  |
+| **icon**      | ReactNode               |             | Icon before/after text                          |
+| **iconOnly**  | boolean                 | _false_     | Icon only, no text                              |
+| **...aProps** | HTMLAnchorElement props |             | All native anchor props (className, style, ...) |
+
+> **_Note:_** _InlineLink_ **inherits** all native props from **HTMLAnchorElement**.
+
+---
