--- a/app/pagination/@spec/page.mdx
+++ b/app/pagination/@spec/page.mdx
@@ -1,7 +1,7 @@
 import { Badge } from 'beta-parity-react/ui/Badge';
 import Image from '@components/showcase/ImagePreview';
 import Component from '@components/showcase/CodePreview';
-import * as Demo from "../@dev/demo-components"
+import * as Demo from '../@dev/demo-components';
 
 {/* Image => Image Example */}
 {/* Component => Component Example */}
@@ -10,34 +10,75 @@ import * as Demo from "../@dev/demo-components"
 A component that organizes content into vertically stacked collapsible and expandable sections.
 :::
 
-
 ## Design checklist <span id="design-checklist"></span>
+
 {/* Design checklist specification */}
 
-| Status | Item                                 | Description                                                                                                                                                                                                                       |
-| ------ | ------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| ✔️     | Anatomy                              | Includes descriptions of all parts of the component and its major variants.                                                                                                                                                       |
-| ✔️     | States                               | Includes all applicable interaction, display and value states.                                                                                                                                                                    |
-| ✔️     | Options                              | Includes all relevant options (functional type, stylistic kind, semantic color, size, orientation, optional iconography, decorations, etc.)                                                                                       |
-| ✔️     | Color schemes                        | Includes both light and dark color schemes.                                                                                                                                                                                       |
-|        | Behaviors                            | Includes descriptions of behaviors related to other components and responsive behaviors related to media breakpoints, size (minimums and maximums), orientation, alignment, position and layout (wrapping, truncation, overflow). |
+| Status | Item          | Description                                                                                                                                                                                                                       |
+| ------ | ------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| ✔️     | Anatomy       | Includes descriptions of all parts of the component and its major variants.                                                                                                                                                       |
+| ✔️     | States        | Includes all applicable interaction, display and value states.                                                                                                                                                                    |
+| ✔️     | Options       | Includes all relevant options (functional type, stylistic kind, semantic color, size, orientation, optional iconography, decorations, etc.)                                                                                       |
+| ✔️     | Color schemes | Includes both light and dark color schemes.                                                                                                                                                                                       |
+|        | Behaviors     | Includes descriptions of behaviors related to other components and responsive behaviors related to media breakpoints, size (minimums and maximums), orientation, alignment, position and layout (wrapping, truncation, overflow). |
 
 ## Anatomy <span id="anatomy"></span>
+
 {/* Anatomy specification */}
 
 ## States <span id="states"></span>
+
 {/* States specification */}
 
 ## Options <span id="options"></span>
+
 {/* Options specification */}
 
 ## Behaviors <span id="behaviors"></span>
+
 {/* Behaviors specification */}
 
 ## Changelog <span id="changelog"></span>
+
 {/* Changelog specification */}
 
-| Date       | Type                                                        | Description                                                                                 | Author      | Associated issue(s)  |
-|:-----------|:------------------------------------------------------------|---------------------------------------------------------------------------------------------|:------------|:---------------------|
-| YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/>    | Initial design                                                                              | Oanh Nguyen | PAR-52               |
+| Date       | Type                                                     | Description    | Author      | Associated issue(s) |
+| :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
+| YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
+## 🎨 Design Tokens for Pagination
+
+| **Token**                                         | **Color for**                | **State/Meaning**                                 | **CSS Selector(s)**                      |
+|---------------------------------------------------|------------------------------|---------------------------------------------------|------------------------------------------|
+| `--par-color-bg-pagination`                       | Pagination background        | Default/Enabled                                  | `.pagination`                            |
+| `--par-color-bg-pagination-item-hovered`          | Pagination item background   | Hovered                                           | `.pagination-item:hover`                 |
+| `--par-color-bg-pagination-item-active`           | Pagination item background   | Active/Selected                                   | `.pagination-item.active`                |
+| `--par-color-bg-pagination-item-disabled`         | Pagination item background   | Disabled                                          | `.pagination-item:disabled`              |
+| `--par-color-text-pagination-item`                | Pagination item text         | Default/Enabled                                  | `.pagination-item`                       |
+| `--par-color-text-pagination-item-active`         | Pagination item text         | Active/Selected                                   | `.pagination-item.active`                |
+| `--par-color-text-pagination-item-disabled`       | Pagination item text         | Disabled                                          | `.pagination-item:disabled`              |
+| `--par-color-border-pagination-item`              | Pagination item border       | Default/Enabled                                  | `.pagination-item`                       |
+| `--par-color-border-pagination-item-active`       | Pagination item border       | Active/Selected                                   | `.pagination-item.active`                |
+| `--par-color-border-pagination-item-disabled`     | Pagination item border       | Disabled                                          | `.pagination-item:disabled`              |
+
+> _Note: Pagination uses the same design tokens as the Button or List component. See Button/List documentation for available tokens._
+
+---
+
+## 🧩 Pagination API Reference
+
+### `<Pagination />`
+
+| **Prop**            | **Type**             | **Default** | **Description**                              |
+| ------------------- | -------------------- | ----------- | -------------------------------------------- |
+| **page**            | number               |             | Current page                                 |
+| **pageSize**        | number               | _10_        | Items per page                               |
+| **total**           | number               |             | Total items                                  |
+| **onChange**        | function (page)      |             | Callback when page changes                   |
+| **showSizeChanger** | boolean              | _false_     | Show page size changer                       |
+| **sizeOptions**     | number[]             |             | Page size options                            |
+| **...divProps**     | HTMLDivElement props |             | All native div props (className, style, ...) |
+
+> **_Note:_** _Pagination_ **inherits** all native props from **HTMLDivElement**.
+
+---
