--- a/app/table/@spec/page.mdx
+++ b/app/table/@spec/page.mdx
@@ -1,7 +1,7 @@
 import { Badge } from 'beta-parity-react/ui/Badge';
 import Image from '@components/showcase/ImagePreview';
 import Component from '@components/showcase/CodePreview';
-import * as Demo from "../@dev/demo-components"
+import * as Demo from '../@dev/demo-components';
 
 {/* Image => Image Example */}
 {/* Component => Component Example */}
@@ -10,34 +10,73 @@ import * as Demo from "../@dev/demo-components"
 A component that organizes content into vertically stacked collapsible and expandable sections.
 :::
 
-
 ## Design checklist <span id="design-checklist"></span>
+
 {/* Design checklist specification */}
 
-| Status | Item                                 | Description                                                                                                                                                                                                                       |
-| ------ | ------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| ✔️     | Anatomy                              | Includes descriptions of all parts of the component and its major variants.                                                                                                                                                       |
-| ✔️     | States                               | Includes all applicable interaction, display and value states.                                                                                                                                                                    |
-| ✔️     | Options                              | Includes all relevant options (functional type, stylistic kind, semantic color, size, orientation, optional iconography, decorations, etc.)                                                                                       |
-| ✔️     | Color schemes                        | Includes both light and dark color schemes.                                                                                                                                                                                       |
-|        | Behaviors                            | Includes descriptions of behaviors related to other components and responsive behaviors related to media breakpoints, size (minimums and maximums), orientation, alignment, position and layout (wrapping, truncation, overflow). |
+| Status | Item          | Description                                                                                                                                                                                                                       |
+| ------ | ------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| ✔️     | Anatomy       | Includes descriptions of all parts of the component and its major variants.                                                                                                                                                       |
+| ✔️     | States        | Includes all applicable interaction, display and value states.                                                                                                                                                                    |
+| ✔️     | Options       | Includes all relevant options (functional type, stylistic kind, semantic color, size, orientation, optional iconography, decorations, etc.)                                                                                       |
+| ✔️     | Color schemes | Includes both light and dark color schemes.                                                                                                                                                                                       |
+|        | Behaviors     | Includes descriptions of behaviors related to other components and responsive behaviors related to media breakpoints, size (minimums and maximums), orientation, alignment, position and layout (wrapping, truncation, overflow). |
 
 ## Anatomy <span id="anatomy"></span>
+
 {/* Anatomy specification */}
 
 ## States <span id="states"></span>
+
 {/* States specification */}
 
 ## Options <span id="options"></span>
+
 {/* Options specification */}
 
 ## Behaviors <span id="behaviors"></span>
+
 {/* Behaviors specification */}
 
 ## Changelog <span id="changelog"></span>
+
 {/* Changelog specification */}
 
-| Date       | Type                                                        | Description                                                                                 | Author      | Associated issue(s)  |
-|:-----------|:------------------------------------------------------------|---------------------------------------------------------------------------------------------|:------------|:---------------------|
-| YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/>    | Initial design                                                                              | Oanh Nguyen | PAR-52               |
+| Date       | Type                                                     | Description    | Author      | Associated issue(s) |
+| :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
+| YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
+## 🎨 Design Tokens for Table
+
+| **Token**                              | **Color for**                | **State/Meaning**         | **CSS Selector(s)** |
+|---------------------------------------- | ---------------------------- | ------------------------- | ------------------- |
+| `--par-color-bg-table`                  | Table background             | Default/Enabled           | `.table` |
+| `--par-color-bg-table-row-hovered`      | Table row background         | Hovered                   | `.table-row:hover` |
+| `--par-color-bg-table-row-selected`     | Table row background         | Selected                  | `.table-row.selected` |
+| `--par-color-bg-table-row-disabled`     | Table row background         | Disabled                  | `.table-row:disabled` |
+| `--par-color-border-table`              | Table border                 | Any                       | `.table, .table-row, .table-cell` |
+| `--par-color-text-table-header`         | Table header text            | Any                       | `.table-header` |
+| `--par-color-text-table-cell`           | Table cell text              | Any                       | `.table-cell` |
+| `--par-color-text-table-row-disabled`   | Table row text               | Disabled                  | `.table-row:disabled .table-cell` |
+
+> _Note: Table uses the same design tokens as the List or DataGrid component. See List/DataGrid documentation for available tokens._
+
+---
+
+## 🧩 Table API Reference
+
+### `<Table />`
+
+| **Prop**          | **Type**               | **Default** | **Description**                                |
+| ----------------- | ---------------------- | ----------- | ---------------------------------------------- |
+| **columns**       | array                  |             | Table columns                                  |
+| **data**          | array                  |             | Table data rows                                |
+| **rowKey**        | string \| function     |             | Unique row key                                 |
+| **pagination**    | object                 |             | Pagination config                              |
+| **loading**       | boolean                | _false_     | Loading state                                  |
+| **onRowClick**    | function (row)         |             | Callback when row is clicked                   |
+| **...tableProps** | HTMLTableElement props |             | All native table props (className, style, ...) |
+
+> **_Note:_** _Table_ **inherits** all native props from **HTMLTableElement**.
+
+---
