--- a/app/avatar/@spec/page.mdx
+++ b/app/avatar/@spec/page.mdx
@@ -171,6 +171,54 @@ For AvatarGroup:
 - **Spacing**: Customize the overlap between avatars
 - **Custom overflow**: Option to provide custom overflow indicator
 
+## 🎨 Design Tokens for Avatar
+
+| **Token**                                              | **Color for**                | **State/Meaning**                                 | **CSS Selector(s)** |
+| ------------------------------------------------------ | ---------------------------- | ------------------------------------------------- | ------------------- |
+| **--par-color-bg-avatar**                              | Avatar background            | Default background                                | `.avatar` |
+| **--par-color-border-avatar**                          | Avatar border                | Default border                                    | `.avatar`, `.avatar.border` |
+| **--par-color-bg-avatar-group**                        | AvatarGroup background       | Group container background                        | `.avatar-group` |
+| **--par-color-border-avatar-group**                    | AvatarGroup border           | Group container border                            | `.avatar-group` |
+| **--par-color-bg-avatar-status-dot-\<color\>**           | Status dot background        | Status indicator dot (by status)                  | `.avatar-status-dot.color-\<color\>` |
+| **--par-color-border-avatar-status-dot-\<color\>**        | Status dot border            | Status indicator dot border (by status)           | `.avatar-status-dot.color-\<color\>` |
+| **--par-color-bg-avatar-status-border-\<color\>**        | Status border background     | Status border around avatar (by status)           | `.avatar-status-border.color-\<color\>` |
+| **--par-color-text-avatar-initials**                   | Initials text                | Initials fallback                                 | `.avatar-initials` |
+| **--par-color-bg-avatar-placeholder**                  | Placeholder icon background  | Placeholder icon background                       | `.avatar-placeholder` |
+| **--par-color-icon-avatar-placeholder**                | Placeholder icon             | Placeholder icon color                            | `.avatar-placeholder` |
+| **--par-color-bg-avatar-active**                       | AvatarTrigger background     | Active/focus/selected state                       | `.avatar-trigger:active`, `.avatar-trigger.selected` |
+| **--par-color-border-avatar-active**                   | AvatarTrigger border         | Active/focus/selected state                       | `.avatar-trigger:active`, `.avatar-trigger.selected` |
+| **--par-color-bg-avatar-disabled**                     | Avatar background            | Disabled state                                    | `.avatar[aria-disabled='true']`, `.avatar.disabled` |
+| **--par-color-border-avatar-disabled**                 | Avatar border                | Disabled state                                    | `.avatar[aria-disabled='true']`, `.avatar.disabled` |
+
+---
+
+### `<AvatarGroup />`
+
+| **Prop**            | **Type**                                      | **Default** | **Description**                                       |
+| ------------------- | --------------------------------------------- | ----------- | ----------------------------------------------------- |
+| **max**             | number                                        | _5_         | Max avatars to display before overflow.               |
+| **direction**       | 'row' \| 'column'                             | _'row'_     | Stack direction.                                      |
+| **spacing**         | string                                        | _'-0.5rem'_ | Spacing between avatars.                              |
+| **size**            | AvatarSize                                    | _'medium'_  | Size for all avatars in the group.                    |
+| **borderStyle**     | 'default' \| 'alternative' \| 'none'          | _'default'_ | Border style for all avatars.                         |
+| **renderOverflow**  | (overflowCount: number) => ReactNode          |             | Custom overflow indicator.                            |
+| **onOverflowClick** | (e: MouseEvent&lt;HTMLDivElement&gt;) => void |             | Handler for overflow avatar click.                    |
+| **...divProps**     | HTMLDivElement props                          |             | All native div props (**className**, **style**, etc.) |
+
+---
+
+### `<AvatarTrigger />`
+
+| **Prop**           | **Type**                                      | **Default** | **Description**                         |
+| ------------------ | --------------------------------------------- | ----------- | --------------------------------------- |
+| **onClick**        | (e: MouseEvent&lt;HTMLDivElement&gt;) => void |             | Click handler for the trigger.          |
+| **active**         | boolean                                       | _false_     | Whether the trigger is active/selected. |
+| **...AvatarProps** | [See above](#avatar)                          |             | All props from **Avatar**.              |
+
+> **Note:** _AvatarTrigger_ **extends** all props from **Avatar**. See the Avatar props table above for details.
+
+---
+
 ## Behaviors <span id="behaviors"></span>
 
 ### Image handling
