--- a/app/breadcrumb/@spec/page.mdx
+++ b/app/breadcrumb/@spec/page.mdx
@@ -1,7 +1,7 @@
 import { Badge } from 'beta-parity-react/ui/Badge';
 import Image from '@components/showcase/ImagePreview';
 import Component from '@components/showcase/CodePreview';
-import * as Demo from "../@dev/demo-components"
+import * as Demo from '../@dev/demo-components';
 
 {/* Image => Image Example */}
 {/* Component => Component Example */}
@@ -10,34 +10,78 @@ import * as Demo from "../@dev/demo-components"
 A component that organizes content into vertically stacked collapsible and expandable sections.
 :::
 
-
 ## Design checklist <span id="design-checklist"></span>
+
 {/* Design checklist specification */}
 
-| Status | Item                                 | Description                                                                                                                                                                                                                       |
-| ------ | ------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| ✔️     | Anatomy                              | Includes descriptions of all parts of the component and its major variants.                                                                                                                                                       |
-| ✔️     | States                               | Includes all applicable interaction, display and value states.                                                                                                                                                                    |
-| ✔️     | Options                              | Includes all relevant options (functional type, stylistic kind, semantic color, size, orientation, optional iconography, decorations, etc.)                                                                                       |
-| ✔️     | Color schemes                        | Includes both light and dark color schemes.                                                                                                                                                                                       |
-|        | Behaviors                            | Includes descriptions of behaviors related to other components and responsive behaviors related to media breakpoints, size (minimums and maximums), orientation, alignment, position and layout (wrapping, truncation, overflow). |
+| Status | Item          | Description                                                                                                                                                                                                                       |
+| ------ | ------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| ✔️     | Anatomy       | Includes descriptions of all parts of the component and its major variants.                                                                                                                                                       |
+| ✔️     | States        | Includes all applicable interaction, display and value states.                                                                                                                                                                    |
+| ✔️     | Options       | Includes all relevant options (functional type, stylistic kind, semantic color, size, orientation, optional iconography, decorations, etc.)                                                                                       |
+| ✔️     | Color schemes | Includes both light and dark color schemes.                                                                                                                                                                                       |
+|        | Behaviors     | Includes descriptions of behaviors related to other components and responsive behaviors related to media breakpoints, size (minimums and maximums), orientation, alignment, position and layout (wrapping, truncation, overflow). |
 
 ## Anatomy <span id="anatomy"></span>
+
 {/* Anatomy specification */}
 
 ## States <span id="states"></span>
+
 {/* States specification */}
 
 ## Options <span id="options"></span>
+
 {/* Options specification */}
 
+## 🎨 Design Tokens for Breadcrumb
+
+| **Token**                                   | **Color for**                | **State/Meaning**                 | **CSS Selector(s)**                  |
+| ------------------------------------------- | ---------------------------- | ---------------------------------- | ------------------------------------ |
+| **--par-color-separator-breadcrumb**        | Breadcrumb separator         | Default/Enabled                   | `.breadcrumb-item:not(:last-child)`  |
+| **--par-color-text-breadcrumb-item-active** | Active breadcrumb item text  | Active/Selected                   | `.breadcrumb-item.breadcrumb-active` |
+
+## 🧩 Breadcrumb API Reference
+
+### `<Breadcrumb />`
+
+| **Prop**           | **Type**                       | **Default** | **Description**                                      |
+| ------------------ | ------------------------------ | ----------- | ---------------------------------------------------- |
+| **separator**      | 'chevron' \| 'dash' \| 'slash' | _'chevron'_ | Separator style between items.                       |
+| **breadcrumbList** | BreadcrumbItemProps[]          |             | List of breadcrumb items (see below).                |
+| **limit**          | number                         |             | Max visible items before truncation/overflow.        |
+| **menuProps**      | Omit\<MenuProps, 'children'>   |             | Props for overflow menu (see Menu component).        |
+| **...ulProps**     | HTMLUListElement props         |             | All native ul props (**className**, **style**, etc.) |
+
+---
+
+### `<BreadcrumbItem />`
+
+| **Prop**               | **Type**                                           | **Default** | **Description**                                                                   |
+| ---------------------- | -------------------------------------------------- | ----------- | --------------------------------------------------------------------------------- |
+| **isMenuItem**         | boolean                                            | _false_     | Render as a menu item (for overflow).                                             |
+| **...InlineLinkProps** | [See InlineLink](../../inline-link/@spec/page.mdx) |             | All props from **InlineLink** (size, color, disabled, underline, iconOnly, etc.). |
+
+---
+
+### `<BreadcrumbMenu />`
+
+| **Prop**           | **Type**                     | **Default** | **Description**                                          |
+| ------------------ | ---------------------------- | ----------- | -------------------------------------------------------- |
+| **items**          | BreadcrumbItemProps[]        |             | Items to show in the overflow menu.                      |
+| **menuProps**      | Omit\<MenuProps, 'children'> |             | Props for the menu (see Menu component).                 |
+| **...buttonProps** | HTMLButtonElement props      |             | All native button props (**className**, **style**, etc.) |
+
+> **Note:** _BreadcrumbItem_ **extends** all props from [**InlineLink**](../../inline-link/@spec/page.mdx). _Breadcrumb_ and _BreadcrumbMenu_ extend all native props from their respective HTML elements.
+
 ## Behaviors <span id="behaviors"></span>
+
 {/* Behaviors specification */}
 
 ## Changelog <span id="changelog"></span>
+
 {/* Changelog specification */}
 
-| Date       | Type                                                        | Description                                                                                 | Author      | Associated issue(s)  |
-|:-----------|:------------------------------------------------------------|---------------------------------------------------------------------------------------------|:------------|:---------------------|
-| YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/>    | Initial design                                                                              | Oanh Nguyen | PAR-52               |
-
+| Date       | Type                                                     | Description    | Author      | Associated issue(s) |
+| :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
+| YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
