--- a/app/content-navigation/@spec/page.mdx
+++ b/app/content-navigation/@spec/page.mdx
@@ -41,3 +41,35 @@ A component that organizes content into vertically stacked collapsible and expan
 |:-----------|:------------------------------------------------------------|---------------------------------------------------------------------------------------------|:------------|:---------------------|
 | YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/>    | Initial design                                                                              | Oanh Nguyen | PAR-52               |
 
+## 🎨 Design Tokens for ContentNavigation
+
+| **Token**                                             | **Color for**                | **State/Meaning**                                 | **CSS Selector(s)** |
+|-------------------------------------------------------|------------------------------|---------------------------------------------------|---------------------|
+| **--par-color-text-content-navigation-enabled**        | Navigation text color        | Default text                                      | `.content-navigation` |
+| **--par-color-text-content-navigation-hovered**        | Navigation text color        | On hover                                          | `.content-navigation-item:hover` |
+| **--par-color-text-content-navigation-pressed**        | Navigation text color        | On pressed                                        | `.content-navigation-item:active` |
+| **--par-color-text-content-navigation-neutral-selected**| Navigation text color        | Selected (neutral)                                | `.content-navigation-item.selected.neutral` |
+| **--par-color-text-content-navigation-accent-selected** | Navigation text color        | Selected (accent)                                 | `.content-navigation-item.selected.accent` |
+| **--par-color-border-content-navigation-enabled**      | Navigation border            | Default border                                    | `.content-navigation` |
+| **--par-color-border-content-navigation-active-neutral**| Navigation border            | Active border (neutral)                            | `.content-navigation-item.selected.neutral` |
+| **--par-color-border-content-navigation-active-accent** | Navigation border            | Active border (accent)                             | `.content-navigation-item.selected.accent` |
+| **--par-color-bg-content-navigation**                 | Navigation background        | Background                                        | `.content-navigation` |
+
+---
+
+## 🧩 ContentNavigation API Reference
+
+### `<ContentNavigation />`
+
+| **Prop**      | **Type**                        | **Default**   | **Description**                                                        |
+|---------------|---------------------------------|---------------|------------------------------------------------------------------------|
+| **target**    | string \| HTMLElement \| null    | _'main'_      | Target element or selector for headings container                       |
+| **spaceToTop**| number                          | _0_           | Space (px) from top when scrolling to heading                          |
+| **skeleton**  | ReactNode                       |               | Custom skeleton loader while loading                                   |
+| **color**     | 'neutral' \| 'accent'           | _'neutral'_   | Color theme for navigation                                             |
+| **...HTMLElementProps** | HTML element props     |               | All native HTML props (className, style, ...)                          |
+
+> **_Note:_** _ContentNavigation_ **inherits** all native props from **HTMLElement**.
+
+---
+
