--- a/app/date-picker/@spec/page.mdx
+++ b/app/date-picker/@spec/page.mdx
@@ -41,3 +41,73 @@ A component that organizes content into vertically stacked collapsible and expan
 |:-----------|:------------------------------------------------------------|---------------------------------------------------------------------------------------------|:------------|:---------------------|
 | YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/>    | Initial design                                                                              | Oanh Nguyen | PAR-52               |
 
+## 🎨 Design Tokens for DatePicker
+
+| **Token**                                                        | **Color for**                | **State/Meaning**                                 | **CSS Selector(s)** |
+|------------------------------------------------------------------|------------------------------|---------------------------------------------------|---------------------|
+| **--par-color-text-datepicker-days-today-neutral-enabled**        | Day text (today, neutral)    | Today, enabled (neutral)                          | `.datepicker-day.today.neutral` |
+| **--par-color-text-datepicker-days-today-neutral-hovered**        | Day text (today, neutral)    | Today, hovered (neutral)                          | `.datepicker-day.today.neutral:hover` |
+| **--par-color-text-datepicker-days-today-neutral-active**         | Day text (today, neutral)    | Today, active (neutral)                           | `.datepicker-day.today.neutral:active` |
+| **--par-color-text-datepicker-days-today-accent-enabled**         | Day text (today, accent)     | Today, enabled (accent)                           | `.datepicker-day.today.accent` |
+| **--par-color-text-datepicker-days-today-accent-hovered**         | Day text (today, accent)     | Today, hovered (accent)                           | `.datepicker-day.today.accent:hover` |
+| **--par-color-text-datepicker-days-today-accent-active**          | Day text (today, accent)     | Today, active (accent)                            | `.datepicker-day.today.accent:active` |
+| **--par-color-text-datepicker-days-normal-enabled**               | Day text (normal)            | Normal, enabled                                   | `.datepicker-day` |
+| **--par-color-text-datepicker-days-normal-neutral-hovered**       | Day text (normal, neutral)   | Normal, hovered (neutral)                         | `.datepicker-day.neutral:hover` |
+| **--par-color-text-datepicker-days-normal-accent-hovered**        | Day text (normal, accent)    | Normal, hovered (accent)                          | `.datepicker-day.accent:hover` |
+| **--par-color-text-datepicker-days-normal-neutral-active**        | Day text (normal, neutral)   | Normal, active (neutral)                          | `.datepicker-day.neutral:active` |
+| **--par-color-text-datepicker-days-normal-accent-active**         | Day text (normal, accent)    | Normal, active (accent)                           | `.datepicker-day.accent:active` |
+| **--par-color-text-datepicker-days-normal-disabled**              | Day text (normal)            | Disabled                                          | `.datepicker-day:disabled` |
+| **--par-color-text-datepicker-days-normal-drag-neutral**          | Day text (drag, neutral)     | Drag selection (neutral)                          | `.datepicker-day.drag.neutral` |
+| **--par-color-text-datepicker-days-normal-drag-accent**           | Day text (drag, accent)      | Drag selection (accent)                           | `.datepicker-day.drag.accent` |
+| **--par-color-text-datepicker-days-today-drag-neutral**           | Day text (today, drag, neutral) | Today, drag (neutral)                         | `.datepicker-day.today.drag.neutral` |
+| **--par-color-text-datepicker-days-today-drag-accent**            | Day text (today, drag, accent)  | Today, drag (accent)                          | `.datepicker-day.today.drag.accent` |
+| **--par-color-text-datepicker-time**                             | Time text                    | Time picker text                                  | `.datepicker-time` |
+| **--par-color-text-datepicker-caret-enabled**                    | Caret icon                   | Caret enabled                                     | `.datepicker-caret` |
+| **--par-color-text-datepicker-caret-hovered**                    | Caret icon                   | Caret hovered                                     | `.datepicker-caret:hover` |
+| **--par-color-text-datepicker-caret-disabled**                   | Caret icon                   | Caret disabled                                    | `.datepicker-caret:disabled` |
+| **--par-color-bg-datepicker-days-neutral-enabled**               | Day background (neutral)      | Enabled                                           | `.datepicker-day.neutral` |
+| **--par-color-bg-datepicker-days-neutral-hovered**               | Day background (neutral)      | Hovered                                           | `.datepicker-day.neutral:hover` |
+| **--par-color-bg-datepicker-days-neutral-active**                | Day background (neutral)      | Active                                            | `.datepicker-day.neutral:active` |
+| **--par-color-bg-datepicker-days-neutral-disabled**              | Day background (neutral)      | Disabled                                          | `.datepicker-day.neutral:disabled` |
+| **--par-color-bg-datepicker-days-accent-enabled**                | Day background (accent)       | Enabled                                           | `.datepicker-day.accent` |
+| **--par-color-bg-datepicker-days-accent-hovered**                | Day background (accent)       | Hovered                                           | `.datepicker-day.accent:hover` |
+| **--par-color-bg-datepicker-days-accent-active**                 | Day background (accent)       | Active                                            | `.datepicker-day.accent:active` |
+| **--par-color-bg-datepicker-days-accent-disabled**               | Day background (accent)       | Disabled                                          | `.datepicker-day.accent:disabled` |
+| **--par-color-bg-datepicker-days-drag-neutral**                  | Day background (drag, neutral)| Drag selection (neutral)                          | `.datepicker-day.drag.neutral` |
+| **--par-color-bg-datepicker-days-drag-accent**                   | Day background (drag, accent) | Drag selection (accent)                           | `.datepicker-day.drag.accent` |
+| **--par-color-bg-datepicker-month-select-dropdown-enabled**      | Month select dropdown         | Enabled                                           | `.datepicker-month-select-dropdown` |
+| **--par-color-bg-datepicker-month-select-dropdown-hovered**      | Month select dropdown         | Hovered                                           | `.datepicker-month-select-dropdown:hover` |
+| **--par-color-bg-datepicker**                                   | DatePicker background         | Main background                                   | `.datepicker` |
+| **--par-color-border-datepicker**                               | DatePicker border             | Main border                                       | `.datepicker` |
+| **--par-color-border-datepicker-month-select-list**              | Month select list border      | Border for month select list                      | `.datepicker-month-select-list` |
+
+---
+
+## 🧩 DatePicker API Reference
+
+### `<DatePicker />`
+
+| **Prop**         | **Type**                                 | **Default**     | **Description**                                 |
+|------------------|------------------------------------------|-----------------|-------------------------------------------------|
+| **floatingLabel**| ReactNode                                |                 | Floating label inside the input                 |
+| **wrapperProps** | object                                   |                 | Props for input container                       |
+| **color**        | 'neutral' \| 'accent'                    | _'neutral'_     | Theme color                                     |
+| **icon**         | ReactNode                                |                 | Icon inside the input                           |
+| **sideIcon**     | 'left' \| 'right'                        | _'right'_       | Position of secondary icon                      |
+| **locale**       | string                                   | _'default'_     | Locale for the DatePicker                       |
+| **calenderHeader**| ReactNode                               |                 | Custom component at top of calendar             |
+| **options**      | object                                   |                 | Flatpickr options (see Flatpickr docs)          |
+| **onFocus**      | function (event)                         |                 | Callback on input focus                         |
+| **onBlur**       | function (event)                         |                 | Callback on input blur                          |
+| **onInputChange**| function (event, flatPickrInstance)      |                 | Callback on input change (allowInput = true)    |
+| **isError**      | boolean                                  | _false_         | Error state                                     |
+| **errorMessage** | string                                   |                 | Error message                                   |
+| **theme**        | string                                   | _'default'_     | Theme                                           |
+| **inputSize**    | 'sm' \| 'md'                             | _'md'_          | Input size                                      |
+| **...InputProps**| [See Input](../BaseInput)                |                 | Inherits all props from **Input**               |
+| **...FlatpickrProps**| [See Flatpickr](https://flatpickr.js.org/options/) | | Inherits all Flatpickr options                 |
+
+> **_Note:_** _DatePicker_ **inherits** all props from **Input** and **Flatpickr**. See [Input documentation](../BaseInput) and [Flatpickr options](https://flatpickr.js.org/options/) for full details.
+
+---
+
