--- a/app/menu/@spec/page.mdx
+++ b/app/menu/@spec/page.mdx
@@ -2,7 +2,7 @@ import { Badge } from 'beta-parity-react/ui/Badge';
 import Image from '@components/showcase/ImagePreview';
 import Component from '@components/showcase/CodePreview';
 import imageSrc from '@public/images/menu';
-import * as Demo from "../@dev/demo-components"
+import * as Demo from '../@dev/demo-components';
 
 :::callout[note]
 A interactive popover interface that contains a list of options or other input controls, used in conjunction with select fields and action buttons.
@@ -239,3 +239,51 @@ Options applied to a menu affect all of its menu items.
 
 <Image src={imageSrc.position.src} alt='position' />
 <Image src={imageSrc.position2.src} alt='position2' />
+
+## 🎨 Design Tokens for Menu
+
+| **Token**                                         | **Color for**                | **State/Meaning**                                 | **CSS Selector(s)**                      |
+|---------------------------------------------------|------------------------------|---------------------------------------------------|------------------------------------------|
+| `--par-color-bg-menu`                             | Menu background              | Default/Enabled                                  | `.menu`                                  |
+| `--par-color-bg-menu-item-hovered`                | Menu item background         | Hovered                                           | `.menu-item:hover`                       |
+| `--par-color-bg-menu-item-selected-subtle`        | Menu item background         | Selected (subtle)                                 | `.menu-item.selected-subtle`             |
+| `--par-color-bg-menu-item-selected-pronounced`    | Menu item background         | Selected (pronounced)                             | `.menu-item.selected-pronounced`         |
+| `--par-color-bg-menu-item-disabled`               | Menu item background         | Disabled                                          | `.menu-item:disabled`                    |
+| `--par-color-text-menu-item`                      | Menu item text               | Default/Enabled                                  | `.menu-item`                             |
+| `--par-color-text-menu-item-disabled`             | Menu item text               | Disabled                                          | `.menu-item:disabled`                    |
+| `--par-color-text-menu-item-selected`             | Menu item text               | Selected                                          | `.menu-item.selected`                    |
+| `--par-color-icon-menu-item`                      | Menu item icon               | Default/Enabled                                  | `.menu-item .icon`                       |
+| `--par-color-icon-menu-item-disabled`             | Menu item icon               | Disabled                                          | `.menu-item:disabled .icon`              |
+| `--par-color-divider-menu`                        | Divider                      | Default                                           | `.menu-divider`                          |
+
+> _Note: Menu uses the same design tokens as the Button or List component. See Button/List documentation for available tokens._
+
+---
+
+## 🧩 Menu API Reference
+
+### `<Menu />`
+
+| **Prop**         | **Type**             | **Default** | **Description**                              |
+| ---------------- | -------------------- | ----------- | -------------------------------------------- |
+| **items**        | array                |             | List of menu items                           |
+| **open**         | boolean              |             | Open state (controlled)                      |
+| **defaultOpen**  | boolean              | _false_     | Default open state (uncontrolled)            |
+| **onOpenChange** | function (open)      |             | Callback when open state changes             |
+| **placement**    | string               | _'bottom'_  | Menu placement (top, bottom, etc.)           |
+| **trigger**      | ReactNode            |             | Custom trigger element                       |
+| **...divProps**  | HTMLDivElement props |             | All native div props (className, style, ...) |
+
+### `<MenuItem />`
+
+| **Prop**       | **Type**            | **Default** | **Description**                             |
+| -------------- | ------------------- | ----------- | ------------------------------------------- |
+| **label**      | string \| ReactNode |             | Menu item label                             |
+| **icon**       | ReactNode           |             | Icon for menu item                          |
+| **disabled**   | boolean             | _false_     | Disable the menu item                       |
+| **onClick**    | function (event)    |             | Callback when item is clicked               |
+| **...liProps** | HTMLLIElement props |             | All native li props (className, style, ...) |
+
+> **_Note:_** _Menu_ and _MenuItem_ **inherit** all native props from **HTMLDivElement** and **HTMLLIElement** respectively.
+
+---
