--- a/app/password-input/@spec/page.mdx
+++ b/app/password-input/@spec/page.mdx
@@ -1,9 +1,8 @@
 import { Badge } from 'beta-parity-react/ui/Badge';
 import Image from '@components/showcase/ImagePreview';
 import Component from '@components/showcase/CodePreview';
-import  imageSrc from '@public/images/password-input';
-import * as Demo from "../@dev/demo-components"
-
+import imageSrc from '@public/images/password-input';
+import * as Demo from '../@dev/demo-components';
 
 :::callout[note]
 An input field for entering sensitive strings such as passwords with masked visibility.
@@ -202,3 +201,46 @@ This sub-component has the same states as [[Button]].
 ## Behaviors
 
 > [!missing] Section is incomplete
+
+## 🎨 Design Tokens for PasswordInput
+
+| **Token**                              | **Color for**                | **State/Meaning**         | **CSS Selector(s)** |
+|---------------------------------------- | ---------------------------- | ------------------------- | ------------------- |
+| `--par-color-bg-field-enabled`          | Input background             | Enabled                   | `.password-input:enabled` |
+| `--par-color-bg-field-hovered`          | Input background             | Hovered                   | `.password-input:hover` |
+| `--par-color-bg-field-disabled`         | Input background             | Disabled                  | `.password-input:disabled` |
+| `--par-color-bg-field-readonly`         | Input background             | Readonly                  | `.password-input[readonly]` |
+| `--par-color-bg-field-invalid`          | Input background             | Invalid/Error             | `.password-input.invalid` |
+| `--par-color-border-field-enabled`      | Input border                 | Enabled                   | `.password-input:enabled` |
+| `--par-color-border-field-hovered`      | Input border                 | Hovered                   | `.password-input:hover` |
+| `--par-color-border-field-disabled`     | Input border                 | Disabled                  | `.password-input:disabled` |
+| `--par-color-border-field-invalid`      | Input border                 | Invalid/Error             | `.password-input.invalid` |
+| `--par-color-border-field-focused`      | Input border                 | Focused                   | `.password-input:focus` |
+| `--par-color-text-field-placeholder`    | Placeholder text             | Any                       | `.password-input::placeholder` |
+| `--par-color-text-field-filled`         | Input text                   | Filled                    | `.password-input` |
+| `--par-color-text-field-label`          | Label text                   | Any                       | `.password-input-label` |
+| `--par-color-text-field-disabled`       | Input text                   | Disabled                  | `.password-input:disabled` |
+| `--par-color-text-field-readonly`       | Input text                   | Readonly                  | `.password-input[readonly]` |
+| `--par-color-text-field-invalid`        | Input text                   | Invalid/Error             | `.password-input.invalid` |
+| `--par-color-icon-field-button-enabled` | Icon color (button enabled)  | Enabled                   | `.password-input .icon-button:enabled` |
+| `--par-color-icon-field-button-hovered` | Icon color (button hovered)  | Hovered                   | `.password-input .icon-button:hover` |
+| `--par-color-icon-field-button-pressed` | Icon color (button pressed)  | Pressed                   | `.password-input .icon-button:active` |
+| `--par-color-icon-field-button-disabled`| Icon color (button disabled) | Disabled                  | `.password-input .icon-button:disabled` |
+
+> _Note: PasswordInput uses the same design tokens as the Input component. See Input documentation for available tokens._
+
+---
+
+## 🧩 PasswordInput API Reference
+
+### `<PasswordInput />`
+
+| **Prop**          | **Type**                  | **Default**  | **Description**                                  |
+| ----------------- | ------------------------- | ------------ | ------------------------------------------------ |
+| **type**          | string                    | _'password'_ | Input type (always 'password' for PasswordInput) |
+| **onToggle**      | function ()               |              | Callback when visibility is toggled              |
+| **...InputProps** | [See Input](../BaseInput) |              | Inherits all props from **Input**                |
+
+> **_Note:_** _PasswordInput_ **inherits** all props from **Input** and the native **input** element. See [Input documentation](../BaseInput) for full details on available props and tokens.
+
+---
