--- a/app/radio/@spec/page.mdx
+++ b/app/radio/@spec/page.mdx
@@ -1,7 +1,7 @@
 import { Badge } from 'beta-parity-react/ui/Badge';
 import Image from '@components/showcase/ImagePreview';
 import Component from '@components/showcase/CodePreview';
-import * as Demo from "../@dev/demo-components"
+import * as Demo from '../@dev/demo-components';
 
 {/* Image => Image Example */}
 {/* Component => Component Example */}
@@ -10,34 +10,78 @@ import * as Demo from "../@dev/demo-components"
 A component that organizes content into vertically stacked collapsible and expandable sections.
 :::
 
-
 ## Design checklist <span id="design-checklist"></span>
+
 {/* Design checklist specification */}
 
-| Status | Item                                 | Description                                                                                                                                                                                                                       |
-| ------ | ------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| ✔️     | Anatomy                              | Includes descriptions of all parts of the component and its major variants.                                                                                                                                                       |
-| ✔️     | States                               | Includes all applicable interaction, display and value states.                                                                                                                                                                    |
-| ✔️     | Options                              | Includes all relevant options (functional type, stylistic kind, semantic color, size, orientation, optional iconography, decorations, etc.)                                                                                       |
-| ✔️     | Color schemes                        | Includes both light and dark color schemes.                                                                                                                                                                                       |
-|        | Behaviors                            | Includes descriptions of behaviors related to other components and responsive behaviors related to media breakpoints, size (minimums and maximums), orientation, alignment, position and layout (wrapping, truncation, overflow). |
+| Status | Item          | Description                                                                                                                                                                                                                       |
+| ------ | ------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| ✔️     | Anatomy       | Includes descriptions of all parts of the component and its major variants.                                                                                                                                                       |
+| ✔️     | States        | Includes all applicable interaction, display and value states.                                                                                                                                                                    |
+| ✔️     | Options       | Includes all relevant options (functional type, stylistic kind, semantic color, size, orientation, optional iconography, decorations, etc.)                                                                                       |
+| ✔️     | Color schemes | Includes both light and dark color schemes.                                                                                                                                                                                       |
+|        | Behaviors     | Includes descriptions of behaviors related to other components and responsive behaviors related to media breakpoints, size (minimums and maximums), orientation, alignment, position and layout (wrapping, truncation, overflow). |
 
 ## Anatomy <span id="anatomy"></span>
+
 {/* Anatomy specification */}
 
 ## States <span id="states"></span>
+
 {/* States specification */}
 
 ## Options <span id="options"></span>
+
 {/* Options specification */}
 
 ## Behaviors <span id="behaviors"></span>
+
 {/* Behaviors specification */}
 
 ## Changelog <span id="changelog"></span>
+
 {/* Changelog specification */}
 
-| Date       | Type                                                        | Description                                                                                 | Author      | Associated issue(s)  |
-|:-----------|:------------------------------------------------------------|---------------------------------------------------------------------------------------------|:------------|:---------------------|
-| YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/>    | Initial design                                                                              | Oanh Nguyen | PAR-52               |
+| Date       | Type                                                     | Description    | Author      | Associated issue(s) |
+| :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
+| YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
+## 🎨 Design Tokens for Radio
+
+| **Token**                              | **Color for**                | **State/Meaning**         | **CSS Selector(s)** |
+|---------------------------------------- | ---------------------------- | ------------------------- | ------------------- |
+| `--par-color-bg-radio-enabled`          | Radio background             | Enabled                   | `.radio:enabled` |
+| `--par-color-bg-radio-hovered`          | Radio background             | Hovered                   | `.radio:hover` |
+| `--par-color-bg-radio-disabled`         | Radio background             | Disabled                  | `.radio:disabled` |
+| `--par-color-bg-radio-checked`          | Radio background             | Checked                   | `.radio:checked` |
+| `--par-color-bg-radio-invalid`          | Radio background             | Invalid/Error             | `.radio.invalid` |
+| `--par-color-border-radio-enabled`      | Radio border                 | Enabled                   | `.radio:enabled` |
+| `--par-color-border-radio-hovered`      | Radio border                 | Hovered                   | `.radio:hover` |
+| `--par-color-border-radio-disabled`     | Radio border                 | Disabled                  | `.radio:disabled` |
+| `--par-color-border-radio-checked`      | Radio border                 | Checked                   | `.radio:checked` |
+| `--par-color-border-radio-invalid`      | Radio border                 | Invalid/Error             | `.radio.invalid` |
+| `--par-color-icon-radio-dot`            | Radio dot (checked)          | Checked                   | `.radio:checked::after` |
+| `--par-color-label-radio`               | Radio label text             | Any                       | `.radio-label` |
+| `--par-color-label-radio-disabled`      | Radio label text             | Disabled                  | `.radio-label:disabled` |
+
+> _Note: Radio uses the same design tokens as the Input component. See Input documentation for available tokens._
+
+---
+
+## 🧩 Radio API Reference
+
+### `<Radio />`
+
+| **Prop**          | **Type**                  | **Default** | **Description**                   |
+| ----------------- | ------------------------- | ----------- | --------------------------------- |
+| **checked**       | boolean                   |             | Checked state                     |
+| **onChange**      | function (event)          |             | Callback when value changes       |
+| **value**         | string \| number          |             | Value of the radio                |
+| **label**         | string \| ReactNode       |             | Label for the radio               |
+| **disabled**      | boolean                   | _false_     | Disable the radio                 |
+| **color**         | string                    |             | Radio color                       |
+| **...InputProps** | [See Input](../BaseInput) |             | Inherits all props from **Input** |
+
+> **_Note:_** _Radio_ **inherits** all props from **Input** and the native **input** element. See [Input documentation](../BaseInput) for full details on available props and tokens.
+
+---
