--- a/app/search-input/@spec/page.mdx
+++ b/app/search-input/@spec/page.mdx
@@ -1,7 +1,7 @@
 import { Badge } from 'beta-parity-react/ui/Badge';
 import Image from '@components/showcase/ImagePreview';
 import Component from '@components/showcase/CodePreview';
-import * as Demo from "../@dev/demo-components"
+import * as Demo from '../@dev/demo-components';
 
 {/* Image => Image Example */}
 {/* Component => Component Example */}
@@ -10,34 +10,84 @@ import * as Demo from "../@dev/demo-components"
 A component that organizes content into vertically stacked collapsible and expandable sections.
 :::
 
-
 ## Design checklist <span id="design-checklist"></span>
+
 {/* Design checklist specification */}
 
-| Status | Item                                 | Description                                                                                                                                                                                                                       |
-| ------ | ------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| ✔️     | Anatomy                              | Includes descriptions of all parts of the component and its major variants.                                                                                                                                                       |
-| ✔️     | States                               | Includes all applicable interaction, display and value states.                                                                                                                                                                    |
-| ✔️     | Options                              | Includes all relevant options (functional type, stylistic kind, semantic color, size, orientation, optional iconography, decorations, etc.)                                                                                       |
-| ✔️     | Color schemes                        | Includes both light and dark color schemes.                                                                                                                                                                                       |
-|        | Behaviors                            | Includes descriptions of behaviors related to other components and responsive behaviors related to media breakpoints, size (minimums and maximums), orientation, alignment, position and layout (wrapping, truncation, overflow). |
+| Status | Item          | Description                                                                                                                                                                                                                       |
+| ------ | ------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| ✔️     | Anatomy       | Includes descriptions of all parts of the component and its major variants.                                                                                                                                                       |
+| ✔️     | States        | Includes all applicable interaction, display and value states.                                                                                                                                                                    |
+| ✔️     | Options       | Includes all relevant options (functional type, stylistic kind, semantic color, size, orientation, optional iconography, decorations, etc.)                                                                                       |
+| ✔️     | Color schemes | Includes both light and dark color schemes.                                                                                                                                                                                       |
+|        | Behaviors     | Includes descriptions of behaviors related to other components and responsive behaviors related to media breakpoints, size (minimums and maximums), orientation, alignment, position and layout (wrapping, truncation, overflow). |
 
 ## Anatomy <span id="anatomy"></span>
+
 {/* Anatomy specification */}
 
 ## States <span id="states"></span>
+
 {/* States specification */}
 
 ## Options <span id="options"></span>
+
 {/* Options specification */}
 
 ## Behaviors <span id="behaviors"></span>
+
 {/* Behaviors specification */}
 
 ## Changelog <span id="changelog"></span>
+
 {/* Changelog specification */}
 
-| Date       | Type                                                        | Description                                                                                 | Author      | Associated issue(s)  |
-|:-----------|:------------------------------------------------------------|---------------------------------------------------------------------------------------------|:------------|:---------------------|
-| YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/>    | Initial design                                                                              | Oanh Nguyen | PAR-52               |
+| Date       | Type                                                     | Description    | Author      | Associated issue(s) |
+| :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
+| YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
+## 🎨 Design Tokens for SearchInput
+
+| **Token**                              | **Color for**                | **State/Meaning**         | **CSS Selector(s)** |
+|---------------------------------------- | ---------------------------- | ------------------------- | ------------------- |
+| `--par-color-bg-field-enabled`          | Search input background      | Enabled                   | `.search-input:enabled` |
+| `--par-color-bg-field-hovered`          | Search input background      | Hovered                   | `.search-input:hover` |
+| `--par-color-bg-field-disabled`         | Search input background      | Disabled                  | `.search-input:disabled` |
+| `--par-color-bg-field-readonly`         | Search input background      | Readonly                  | `.search-input[readonly]` |
+| `--par-color-bg-field-invalid`          | Search input background      | Invalid/Error             | `.search-input.invalid` |
+| `--par-color-border-field-enabled`      | Search input border          | Enabled                   | `.search-input:enabled` |
+| `--par-color-border-field-hovered`      | Search input border          | Hovered                   | `.search-input:hover` |
+| `--par-color-border-field-disabled`     | Search input border          | Disabled                  | `.search-input:disabled` |
+| `--par-color-border-field-invalid`      | Search input border          | Invalid/Error             | `.search-input.invalid` |
+| `--par-color-border-field-focused`      | Search input border          | Focused                   | `.search-input:focus` |
+| `--par-color-text-field-placeholder`    | Placeholder text             | Any                       | `.search-input::placeholder` |
+| `--par-color-text-field-filled`         | Search input text            | Filled                    | `.search-input` |
+| `--par-color-text-field-label`          | Label text                   | Any                       | `.search-input-label` |
+| `--par-color-text-field-disabled`       | Search input text            | Disabled                  | `.search-input:disabled` |
+| `--par-color-text-field-readonly`       | Search input text            | Readonly                  | `.search-input[readonly]` |
+| `--par-color-text-field-invalid`        | Search input text            | Invalid/Error             | `.search-input.invalid` |
+| `--par-color-icon-field-button-enabled` | Icon color (button enabled)  | Enabled                   | `.search-input .icon-button:enabled` |
+| `--par-color-icon-field-button-hovered` | Icon color (button hovered)  | Hovered                   | `.search-input .icon-button:hover` |
+| `--par-color-icon-field-button-pressed` | Icon color (button pressed)  | Pressed                   | `.search-input .icon-button:active` |
+| `--par-color-icon-field-button-disabled`| Icon color (button disabled) | Disabled                  | `.search-input .icon-button:disabled` |
+
+> _Note: SearchInput uses the same design tokens as the Input component. See Input documentation for available tokens._
+
+---
+
+## 🧩 SearchInput API Reference
+
+### `<SearchInput />`
+
+| **Prop**          | **Type**                  | **Default** | **Description**                              |
+| ----------------- | ------------------------- | ----------- | -------------------------------------------- |
+| **type**          | string                    | _'search'_  | Input type (always 'search' for SearchInput) |
+| **onSearch**      | function (value)          |             | Callback when search is triggered            |
+| **onChange**      | function (event)          |             | Callback when value changes                  |
+| **value**         | string                    |             | Controlled value                             |
+| **placeholder**   | string                    |             | Placeholder text                             |
+| **...InputProps** | [See Input](../BaseInput) |             | Inherits all props from **Input**            |
+
+> **_Note:_** _SearchInput_ **inherits** all props from **Input** and the native **input** element. See [Input documentation](../BaseInput) for full details on available props and tokens.
+
+---
