--- a/app/tabs/@spec/page.mdx
+++ b/app/tabs/@spec/page.mdx
@@ -1,7 +1,7 @@
 import { Badge } from 'beta-parity-react/ui/Badge';
 import Image from '@components/showcase/ImagePreview';
 import Component from '@components/showcase/CodePreview';
-import * as Demo from "../@dev/demo-components"
+import * as Demo from '../@dev/demo-components';
 
 {/* Image => Image Example */}
 {/* Component => Component Example */}
@@ -10,34 +10,73 @@ import * as Demo from "../@dev/demo-components"
 A component that organizes content into vertically stacked collapsible and expandable sections.
 :::
 
-
 ## Design checklist <span id="design-checklist"></span>
+
 {/* Design checklist specification */}
 
-| Status | Item                                 | Description                                                                                                                                                                                                                       |
-| ------ | ------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| ✔️     | Anatomy                              | Includes descriptions of all parts of the component and its major variants.                                                                                                                                                       |
-| ✔️     | States                               | Includes all applicable interaction, display and value states.                                                                                                                                                                    |
-| ✔️     | Options                              | Includes all relevant options (functional type, stylistic kind, semantic color, size, orientation, optional iconography, decorations, etc.)                                                                                       |
-| ✔️     | Color schemes                        | Includes both light and dark color schemes.                                                                                                                                                                                       |
-|        | Behaviors                            | Includes descriptions of behaviors related to other components and responsive behaviors related to media breakpoints, size (minimums and maximums), orientation, alignment, position and layout (wrapping, truncation, overflow). |
+| Status | Item          | Description                                                                                                                                                                                                                       |
+| ------ | ------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| ✔️     | Anatomy       | Includes descriptions of all parts of the component and its major variants.                                                                                                                                                       |
+| ✔️     | States        | Includes all applicable interaction, display and value states.                                                                                                                                                                    |
+| ✔️     | Options       | Includes all relevant options (functional type, stylistic kind, semantic color, size, orientation, optional iconography, decorations, etc.)                                                                                       |
+| ✔️     | Color schemes | Includes both light and dark color schemes.                                                                                                                                                                                       |
+|        | Behaviors     | Includes descriptions of behaviors related to other components and responsive behaviors related to media breakpoints, size (minimums and maximums), orientation, alignment, position and layout (wrapping, truncation, overflow). |
 
 ## Anatomy <span id="anatomy"></span>
+
 {/* Anatomy specification */}
 
 ## States <span id="states"></span>
+
 {/* States specification */}
 
 ## Options <span id="options"></span>
+
 {/* Options specification */}
 
 ## Behaviors <span id="behaviors"></span>
+
 {/* Behaviors specification */}
 
 ## Changelog <span id="changelog"></span>
+
 {/* Changelog specification */}
 
-| Date       | Type                                                        | Description                                                                                 | Author      | Associated issue(s)  |
-|:-----------|:------------------------------------------------------------|---------------------------------------------------------------------------------------------|:------------|:---------------------|
-| YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/>    | Initial design                                                                              | Oanh Nguyen | PAR-52               |
+| Date       | Type                                                     | Description    | Author      | Associated issue(s) |
+| :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
+| YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
+## 🎨 Design Tokens for Tabs
+
+| **Token**                              | **Color for**                | **State/Meaning**         | **CSS Selector(s)** |
+|---------------------------------------- | ---------------------------- | ------------------------- | ------------------- |
+| `--par-color-bg-tabs`                   | Tabs background              | Default/Enabled           | `.tabs` |
+| `--par-color-bg-tab-active`             | Tab background               | Active/Selected           | `.tab.active` |
+| `--par-color-bg-tab-hovered`            | Tab background               | Hovered                   | `.tab:hover` |
+| `--par-color-bg-tab-disabled`           | Tab background               | Disabled                  | `.tab:disabled` |
+| `--par-color-border-tabs`               | Tabs border                  | Any                       | `.tabs, .tab` |
+| `--par-color-text-tab`                  | Tab text                     | Default/Enabled           | `.tab` |
+| `--par-color-text-tab-active`           | Tab text                     | Active/Selected           | `.tab.active` |
+| `--par-color-text-tab-disabled`         | Tab text                     | Disabled                  | `.tab:disabled` |
+| `--par-color-indicator-tabs`            | Tab indicator (underline)    | Active/Selected           | `.tab-indicator` |
+
+> _Note: Tabs uses the same design tokens as the Button or Navigation component. See Button/Navigation documentation for available tokens._
+
+---
+
+## 🧩 Tabs API Reference
+
+### `<Tabs />`
+
+| **Prop**        | **Type**                               | **Default** | **Description**                              |
+| --------------- | -------------------------------------- | ----------- | -------------------------------------------- |
+| **tabs**        | array                                  |             | List of tab items                            |
+| **activeKey**   | string \| number                       |             | Active tab key                               |
+| **onChange**    | function (key)                         |             | Callback when tab changes                    |
+| **position**    | 'top' \| 'bottom' \| 'left' \| 'right' | _'top'_     | Tabs position                                |
+| **size**        | 'sm' \| 'md' \| 'lg'                   | _'md'_      | Tabs size                                    |
+| **...divProps** | HTMLDivElement props                   |             | All native div props (className, style, ...) |
+
+> **_Note:_** _Tabs_ **inherits** all native props from **HTMLDivElement**.
+
+---
