--- a/app/tag/@spec/page.mdx
+++ b/app/tag/@spec/page.mdx
@@ -2,7 +2,7 @@ import { Badge } from 'beta-parity-react/ui/Badge';
 import Image from '@components/showcase/ImagePreview';
 import Component from '@components/showcase/CodePreview';
 import imageSrc from '@public/images/tag';
-import * as Demo from "../@dev/demo-components"
+import * as Demo from '../@dev/demo-components';
 
 :::callout[note]
 An element used for representing user-authored content.
@@ -38,7 +38,6 @@ An element used for representing user-authored content.
 <Image src={imageSrc.anatomy.src} alt='anatomy' />
 <Image src={imageSrc.anatomy2.src} alt='anatomy2' />
 
-
 ## States
 
 ### Container
@@ -60,7 +59,6 @@ This sub-component has the same interaction states as [[Button]] except for the 
 <Image src={imageSrc.pressedRemoveButton.src} alt='pressedRemoveButton' />
 <Image src={imageSrc.focusedRemoveButton.src} alt='focusedRemoveButton' />
 <Image src={imageSrc.disabledRemoveButton.src} alt='disabledRemoveButton' />
-
 
 ## Options
 
@@ -119,9 +117,48 @@ This sub-component has the same interaction states as [[Button]] except for the 
 
 ## Keyboard interactions
 
-| Key                                    | Focus              | Interaction                                                                                                                                                                                      |
-| -------------------------------------- | ------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| <kbd>Tab</kbd>                         | Focusable elements | Moves focus in the forward sequence, as follows: previous external element → container → remove button → next external element.<br></br>Non-focusable elements are skipped in the above sequence.|
-| <kbd>Shift</kbd>+<kbd>Tab</kbd>        | Focusable elements | Moves focus in the reverse sequence.                                                                                                                                                             |
-| <kbd>Del</kbd> or <kbd>Backspace</kbd> | Container          | Removes the tag from the user interface.                                                                                                                                                         |
-| <kbd>Space</kbd> or <kbd>Enter</kbd>   | Remove button      | Removes the tag from the user interface.                                                                                                                                                         |
+| Key                                    | Focus              | Interaction                                                                                                                                                                                       |
+| -------------------------------------- | ------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| <kbd>Tab</kbd>                         | Focusable elements | Moves focus in the forward sequence, as follows: previous external element → container → remove button → next external element.<br></br>Non-focusable elements are skipped in the above sequence. |
+| <kbd>Shift</kbd>+<kbd>Tab</kbd>        | Focusable elements | Moves focus in the reverse sequence.                                                                                                                                                              |
+| <kbd>Del</kbd> or <kbd>Backspace</kbd> | Container          | Removes the tag from the user interface.                                                                                                                                                          |
+| <kbd>Space</kbd> or <kbd>Enter</kbd>   | Remove button      | Removes the tag from the user interface.                                                                                                                                                          |
+
+## 🎨 Design Tokens for Tag
+
+| **Token**                              | **Color for**            | **State/Meaning** | **CSS Selector(s)**         |
+| -------------------------------------- | ------------------------ | ----------------- | --------------------------- |
+| `--par-color-bg-tag`                   | Tag background           | Default/Enabled   | `.tag`                      |
+| `--par-color-bg-tag-hovered`           | Tag background           | Hovered           | `.tag:hover`                |
+| `--par-color-bg-tag-selected`          | Tag background           | Selected          | `.tag.selected`             |
+| `--par-color-bg-tag-disabled`          | Tag background           | Disabled          | `.tag:disabled`             |
+| `--par-color-border-tag`               | Tag border               | Any               | `.tag`                      |
+| `--par-color-text-tag`                 | Tag text                 | Default/Enabled   | `.tag`                      |
+| `--par-color-text-tag-disabled`        | Tag text                 | Disabled          | `.tag:disabled`             |
+| `--par-color-icon-tag`                 | Tag icon                 | Any               | `.tag .icon`                |
+| `--par-color-bg-tag-remove-hovered`    | Remove button background | Hovered           | `.tag .remove-btn:hover`    |
+| `--par-color-bg-tag-remove-pressed`    | Remove button background | Pressed           | `.tag .remove-btn:active`   |
+| `--par-color-bg-tag-remove-disabled`   | Remove button background | Disabled          | `.tag .remove-btn:disabled` |
+| `--par-color-text-tag-remove`          | Remove button text/icon  | Any               | `.tag .remove-btn`          |
+| `--par-color-text-tag-remove-disabled` | Remove button text/icon  | Disabled          | `.tag .remove-btn:disabled` |
+
+> _Note: Tag uses the same design tokens as the Badge or Chip component. See Badge/Chip documentation for available tokens._
+
+---
+
+## 🧩 Tag API Reference
+
+### `<Tag />`
+
+| **Prop**         | **Type**              | **Default** | **Description**                               |
+| ---------------- | --------------------- | ----------- | --------------------------------------------- |
+| **label**        | string \| ReactNode   |             | Tag label                                     |
+| **color**        | string                |             | Tag color                                     |
+| **size**         | 'sm' \| 'md' \| 'lg'  | _'md'_      | Tag size                                      |
+| **closable**     | boolean               | _false_     | Show close button                             |
+| **onClose**      | function ()           |             | Callback when close is clicked                |
+| **...spanProps** | HTMLSpanElement props |             | All native span props (className, style, ...) |
+
+> **_Note:_** _Tag_ **inherits** all native props from **HTMLSpanElement**.
+
+---
